creamos carpeta, index, curriculum, y guardamos 2 fotos y un mapa mental

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
     "cSpell.words": [
-        "Nezahualcoyotl"
+        "Através",
+        "Chimalhuacán",
+        "futones",
+        "Gorostieta",
+        "GOROSTIETA",
+        "Nezahualcoyotl",
+        "Nezahualcóyotl",
+        "recargarla",
+        "reclinables",
+        "Sultepec",
+        "Violanti",
+        "VIOLAONTI",
+        "Yael",
+        "YAEL"
     ]
 }
