--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "GOROSTIETA",
         "Nezahualcoyotl",
         "Nezahualcóyotl",
+        "prin",
         "recargarla",
         "reclinables",
         "Sultepec",
