modified:   .vscode/settings.json 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Formularios/CSS/estilos.css 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Formularios/index.html 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/CSS/estilos.css 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/3d0f3f3d-c44d-4cb9-92d9-3d76ddaf7f2c.__CR0_129_1177_728_PT0_SX970_V1___-1732753612-removebg-preview.png 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/beneficios-del-cacahuate-para-la-salud-que-debes-conocer-3237332761.png 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/dulces-de-la-rosa-logo-9FCA856576-seeklogo.com.webp 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/foto.png 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/il_fullxfull.2707030483_nxv8-1061219270-removebg-preview.png 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/images/png-clipart-facebook-twitter-and-instagram-logo-social-media-facebook-computer-icons-social-networking-service-like-us-on-facebook-text-log.png 	new file:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_2/index.html 	new file:   3er-Cuatrimestre/FOSO/INVESTIGACION FOSO.pdf 	new file:   3er-Cuatrimestre/SO/Practica1.odt 	new file:   3er-Cuatrimestre/SO/Practica1.pdf 	new file:   3er-Cuatrimestre/SO/Tabla Comparativa.docx 	new file:   3er-Cuatrimestre/SO/Tabla Comparativa.pdf 	renamed:    3er-Cuatrimestre/SO/Untitled 1.odt -> 3er-Cuatrimestre/SO/linea del tiempo.odt 	new file:   3er-Cuatrimestre/SO/linea del tiempo.pdf 	new file:   3er-Cuatrimestre/SO/lineamientosClase25.pdf 	new file:   3er-Cuatrimestre/SO/mapa_mental.pdf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "Através",
         "Chimalhuacán",
+        "Ecatepec",
         "futones",
         "Gorostieta",
         "GOROSTIETA",
+        "Naucalpan",
         "Nezahualcoyotl",
         "Nezahualcóyotl",
         "prin",
