modified:   3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json 	new file:   3er-Cuatrimestre/Integradora/InterAudio/images/INK-1.jpg 	new file:   3er-Cuatrimestre/Integradora/InterAudio/images/LogoIntec.jpg 	new file:   3er-Cuatrimestre/Integradora/InterAudio/images/logoCommax 	new file:   3er-Cuatrimestre/Integradora/InterAudio/images/productos.jpg 	modified:   3er-Cuatrimestre/Integradora/InterAudio/index.html 	renamed:    3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogo.html -> 3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoComax.html 	new file:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html 	new file:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/contacto.html 	new file:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/instalaciones.html 	new file:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/nosotros.html 	new file:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/servicios.html

--- a/3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json
+++ b/3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
+        "Abrepuertas",
+        "COMAX",
+        "INTEC",
         "Interfon",
         "Interfón",
         "Videoportero"
