modified:   3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json 	modified:   3er-Cuatrimestre/Integradora/InterAudio/index.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoComax.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/contacto.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/instalaciones.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/nosotros.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/servicios.html

--- a/3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json
+++ b/3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "cSpell.words": [
         "Abrepuertas",
+        "Autoplaying",
         "COMAX",
+        "Commax",
+        "Gorostieta",
+        "Intec",
         "INTEC",
         "Interfon",
         "Interfón",
-        "Videoportero"
+        "Videoportero",
+        "Yael"
     ],
     "liveServer.settings.port": 5501
 }
